* Fixed a problem with CSS z-index (Footer CTA conflicting with Banner)

--- a/sass/lsx/_footer.scss
+++ b/sass/lsx/_footer.scss
@@ -1,6 +1,9 @@
 // Footer CTA
 
 #footer-cta {
+	position: relative;
+	z-index: 2;
+	
 	.lsx-full-width-alt,
 	.lsx-full-width {
 		margin: {
